--- a/app/src/main/res/layout/activity_upcoming_plans.xml
+++ b/app/src/main/res/layout/activity_upcoming_plans.xml
@@ -11,19 +11,60 @@
     tools:context="com.example.alex.fitbytes.UpcomingPlans">
 
     <TextView
-        android:text="Upcoming Plans"
+        android:text="Meal Planner"
+        android:id="@+id/textView_uplan_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="37dp"
-        android:id="@+id/textView5"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="56dp"
+        android:layout_marginStart="56dp"
+        android:layout_marginTop="28dp"
         android:textSize="36sp" />
+
+    <Button
+        android:text="Add Plan"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:id="@+id/uplanAdd_button" />
 
     <ListView
         android:id="@+id/plannedMeals"
         android:textSize="12dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="100dp"/>
+        android:layout_above="@+id/uplanAdd_button"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="11dp"
+        android:layout_below="@+id/textView5" />
+
+    <TextView
+        android:text="Upcoming Plans"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="141dp"
+        android:id="@+id/textView5"
+        android:textSize="26dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:text="No Plans "
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView_up_meals"
+        android:textSize="26sp"
+        android:layout_marginLeft="38dp"
+        android:layout_marginStart="38dp"
+        android:layout_marginTop="17dp"
+        android:layout_below="@+id/textView5"
+        android:layout_alignLeft="@+id/textView_uplan_title"
+        android:layout_alignStart="@+id/textView_uplan_title" />
+
 </RelativeLayout>
