- Fixed a bug with meal planner (null pointer) - did user profile stuff

--- a/app/src/main/res/layout/activity_pantry.xml
+++ b/app/src/main/res/layout/activity_pantry.xml
@@ -35,7 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/pantryLaunchBarcode"
-            android:onClick="barcodeButtonOnClick" />
+            android:onClick="barcodeButtonOnClick (Pantry)" />
 
         <SearchView
             android:id="@+id/pantrySearch"
