--- a/app/src/main/res/layout/activity_recipe_popup.xml
+++ b/app/src/main/res/layout/activity_recipe_popup.xml
@@ -12,15 +12,33 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="0.03"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="10dp">
 
         <TextView
             android:id="@+id/mp_recipe_name"
             android:text="Recipe"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="26sp"
+            android:textSize="28sp"
             android:layout_weight="0.03" />
+
+        <TextView
+            android:text="Servings: "
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/recipe_servings_text"
+            android:layout_weight="0.03"
+            android:textSize="18sp" />
+
+        <TextView
+            android:text="Ready In (min.): "
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/recipe_ready_text"
+            android:layout_weight="0.03"
+            android:textSize="18sp" />
 
         <TextView
             android:text="Calorie: "
@@ -34,10 +52,10 @@
             android:layout_alignParentStart="true" />
 
         <TextView
-            android:text="Ingredients"
+            android:text="Description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/recipe_ingredient_text"
+            android:id="@+id/recipe_description_text"
             android:textSize="18sp"
             android:layout_weight="0.03"
             android:layout_below="@+id/recipe_calorie_text"
