--- a/app/src/main/res/layout/activity_fitness_tracker.xml
+++ b/app/src/main/res/layout/activity_fitness_tracker.xml
@@ -10,35 +10,47 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.alex.fitbytes.FitnessTracker">
-    <TableLayout
-        android:orientation="vertical"
+
+
+
+    <TextView
+    android:text="Current Goals"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+        android:id="@+id/textView6"
+    android:textSize="16sp"
+        android:layout_alignParentStart="true" />
+
+    <ListView
+        android:id="@+id/current_goals"
+        android:textSize="8sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/Widget.AppCompat.ListView.Menu"
+        android:dividerHeight="1dp"
+        android:layout_below="@+id/textView6"
+        android:layout_alignParentStart="true">
+    </ListView>
+<!--
+    <Button android:id="@+id/addGoal"
+        android:text="@string/add_a_goal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerHorizontal="true">
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <Button android:id="@+id/addGoal"
-                android:text="@string/add_a_goal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </TableRow>
-        <TableRow>
-            <TextView
-            android:text="Current Goals"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10sp"
-            android:id="@+id/textView6"
-            android:textSize="16sp" />
-        </TableRow>
-        <TableRow>
-            <ListView
-            android:id="@+id/current_goals"
-            android:textSize="8sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-        </ListView>
-        </TableRow>
-    </TableLayout>
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true" />-->
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/addGoalFloating"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        app:layout_anchorGravity="bottom|right|end"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="280dp"
+        app:backgroundTint="@android:color/holo_green_dark"
+        app:fabSize="normal"
+        app:srcCompat="@android:drawable/ic_menu_add" />
+
 </RelativeLayout>
